[add]update template

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
 
   <header>
-    <div class="container">
+    <nav>
       <div id="logo">
-        <img src="" alt="">
         <h2>Hack Halal</h2>
       </div>
-      <nav>
+      <div id="nav-menu">
         <ul>
           <li>
             <a href="#">Home</a>
@@ -30,41 +29,57 @@
             <a href="#">Contact</a>
           </li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
 
   <section id="showcase">
-    <div class="container">
+    <div class="show-text">
       <h1>This is the Main Page</h1>
       <p>This is just dummy text. Why are you reading this?</p>
-      <button type="button" name="button">subscribe</button>
+      <a href="#">subscribe</a>
     </div>
   </section>
 
   <section id="about">
-    <div class="container">
-      <div class="halo">
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
+    <div class="halo">
+      <div class="box">
+        <p>First thing about us</p>
+      </div>
+      <div class="box">
+        <p>second thing about us</p>
+      </div>
+      <div class="box">
+        <p>third thing about us</p>
+      </div>
+      <div class="box">
+        <p>fourth thing about us</p>
       </div>
     </div>
+    <h2>About Us</h2>
   </section>
 
   <section id="sponsor">
-    <div class="container">
-      <div class="circle">
-        <img src="" alt="">
-        <p></p>
-      </div>
-      <div class="circle">
-        <img src="" alt="">
-        <p></p>
-      </div>
+    <h2>Sponsors</h2>
+    <div class="circle">
+      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
+      <p>First Investor</p>
+    </div>
+    <div class="circle">
+      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
+      <p>Second Investor</p>
+    </div>
+    <div class="circle">
+      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
+      <p>Third Investor</p>
+    </div>
+    <div class="circle">
+      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
+      <p>fourth Investor</p>
+    </div>
+    <div class="circle">
+      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
+      <p>Fifth Investor</p>
     </div>
   </section>
 
