--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <div class="show-text">
       <h1>This is the Main Page</h1>
       <p>This is just dummy text. Why are you reading this?</p>
-      <a href="#">subscribe</a>
+      <form>
+        <input class="MyButton" type="button" value="Subscribe" />
+      </form>
     </div>
   </section>
 
@@ -86,6 +88,12 @@
   <section id="events">
     <div class="container">
 
+    </div>
+  </section>
+
+  <section id="FAQ">
+    <div class="container"
+      <h2>FAQ</h2> 
     </div>
   </section>
 
