--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <!-- seo meta setup -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>Hack Halal</title>
@@ -13,50 +14,42 @@
 <body>
 
   <header>
+    <div id="logo">
+      <h2>Hack Halal</h2>
+    </div>
     <nav>
-      <div id="logo">
-        <h2>Hack Halal</h2>
+      <div class="nav-item">
+        <a href="#showcase">
+          <i style="font-size:27px" class="fa">&#xf015;</i>
+        </a>
       </div>
-      <div id="nav-menu">
-        <ul>
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
+      <div class="nav-item">
+        <a href="#about">About</a>
+      </div>
+      <div class="nav-item">
+        <a href="#">Contact</a>
       </div>
     </nav>
   </header>
 
   <section id="showcase">
-    <div class="show-text">
+    <div class="showcase-text">
       <h1>This is the Main Page</h1>
       <p>This is just dummy text. Why are you reading this?</p>
-      <a href="#">subscribe</a>
+      <a class="signup" href="#">subscribe</a>
     </div>
   </section>
 
   <section id="about">
     <div class="halo">
+      <h2>About Us</h2>
       <div class="box">
         <p>First thing about us</p>
       </div>
       <div class="box">
         <p>second thing about us</p>
       </div>
-      <div class="box">
-        <p>third thing about us</p>
-      </div>
-      <div class="box">
-        <p>fourth thing about us</p>
-      </div>
     </div>
-    <h2>About Us</h2>
   </section>
 
   <section id="sponsor">
@@ -99,7 +92,7 @@
       <p>contact</p>
     </div>
   </footer>
-
+  <script src="index.js"></script>
 </body>
 
 </html>
