--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
     <div class="showcase-text">
       <h1>This is the Main Page</h1>
       <p>This is just dummy text. Why are you reading this?</p>
-<<<<<<< HEAD
-      <a class="signup" href="#">subscribe</a>
-=======
       <form>
         <input class="MyButton" type="button" value="Subscribe" />
       </form>
->>>>>>> 90660048162eb8e3536ee66e9670aaa21d263275
     </div>
   </section>
 
@@ -89,8 +85,7 @@
   </section>
 
   <section id="FAQ">
-    <div class="container"
-      <h2>FAQ</h2> 
+    <div class="container" <h2>FAQ</h2>
     </div>
   </section>
 
