[section]showcase/about adjusted

--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
 <body>
 
   <header>
-    <div id="logo">
-      <h2>Hack Halal</h2>
+    <div class="bg">
+      <div id="logo">
+        <h2>Hack Halal</h2>
+      </div>
+      <nav>
+        <div class="nav-item">
+          <a href="#showcase">
+            <i style="font-size:27px" class="fa">&#xf015;</i>
+          </a>
+        </div>
+        <div class="nav-item">
+          <a href="#halo">About</a>
+        </div>
+        <div class="nav-item">
+          <a href="#">Contact</a>
+        </div>
+      </nav>
     </div>
-    <nav>
-      <div class="nav-item">
-        <a href="#showcase">
-          <i style="font-size:27px" class="fa">&#xf015;</i>
-        </a>
-      </div>
-      <div class="nav-item">
-        <a href="#about">About</a>
-      </div>
-      <div class="nav-item">
-        <a href="#">Contact</a>
-      </div>
-    </nav>
   </header>
 
   <section id="showcase">
@@ -37,19 +39,21 @@
       <h1>This is the Main Page</h1>
       <p>This is just dummy text. Why are you reading this?</p>
       <form>
-        <input class="MyButton" type="button" value="Subscribe" />
+        <input class="button" type="button" value="Subscribe" />
       </form>
     </div>
   </section>
 
   <section id="about">
-    <div class="halo">
+    <div id="halo">
       <h2>About Us</h2>
-      <div class="box">
-        <p>First thing about us</p>
-      </div>
-      <div class="box">
-        <p>second thing about us</p>
+      <div class="about-text">
+        <div class="box">
+          <p>First thing about us</p>
+        </div>
+        <div class="box">
+          <p>second thing about us</p>
+        </div>
       </div>
     </div>
   </section>
