--- a/index.html
+++ b/index.html
@@ -12,98 +12,70 @@
 </head>
 
 <body>
-
-  <header>
-    <div class="bg">
-      <div id="logo">
-        <h2>Hack Halal</h2>
+  <div class="container">
+    <div class="showcase">
+      <div class="show-text">
+        <h1>Welcome</h1>
+        <p>Subheading</p>
+        <button type="button" name="button">Subscribe</button>
+        <!-- modal -->
       </div>
-      <nav>
-        <div class="nav-item">
-          <a href="#showcase">
-            <i style="font-size:27px" class="fa">&#xf015;</i>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="about">
+      <div class="about-text">
+        <img src="" alt="">
+        <p>this is our about section</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="events">
+      <div class="launch">
+        <p>info about the launch</p>
+      </div>
+      <div class="map"></div>
+    </div>
+
+    <div class="sponsor">
+      <div class='sponsors-title'>PROUD SPONSORS</div>
+
+      <div class="spons-item">
+
+        <div class='s-item'>
+          <a href="https://stdlib.com/">
+            <img src="images/sponsors/stdlib.svg">
           </a>
         </div>
-        <div class="nav-item">
-          <a href="#halo">About</a>
-        </div>
-        <div class="nav-item">
-          <a href="#">Contact</a>
-        </div>
-      </nav>
-    </div>
-  </header>
-
-  <section id="showcase">
-    <div class="showcase-text">
-      <h1>This is the Main Page</h1>
-      <p>This is just dummy text. Why are you reading this?</p>
-      <form>
-        <input class="button" type="button" value="Subscribe" />
-      </form>
-    </div>
-  </section>
-
-  <section id="about">
-    <div id="halo">
-      <h2>About Us</h2>
-      <div class="about-text">
-        <div class="box">
-          <p>First thing about us</p>
-        </div>
-        <div class="box">
-          <p>second thing about us</p>
+        <div class='s-item'>
+          <a href="https://stdlib.com/">
+            <img src="images/sponsors/stdlib.svg">
+          </a>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section id="sponsor">
-    <h2>Sponsors</h2>
-    <div class="circle">
-      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
-      <p>First Investor</p>
-    </div>
-    <div class="circle">
-      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
-      <p>Second Investor</p>
-    </div>
-    <div class="circle">
-      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
-      <p>Third Investor</p>
-    </div>
-    <div class="circle">
-      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
-      <p>fourth Investor</p>
-    </div>
-    <div class="circle">
-      <img src="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" alt="logo" width="100px" height="100px">
-      <p>Fifth Investor</p>
-    </div>
-  </section>
-
-  <section id="events">
-    <div class="container">
 
     </div>
-  </section>
+  </div>
 
-  <section id="FAQ">
-    <div class="container" <h2>FAQ</h2>
-    </div>
-  </section>
 
   <footer>
     <div class="social">
       <img src="" alt="">
+      <p>sfa</p>
       <img src="" alt="">
+      <p>sfa</p>
       <img src="" alt="">
     </div>
-    <div class="contact">
-      <p>contact</p>
+    <div>
+      <p>hackHalal</p>
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script defer src="index.js"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqkHKOW4z1vmRIAlWlhLWGOpXxtVUVBmc&callback=initMap"></script>
 </body>
 
 </html>
