--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
       <div class="launch">
         <p>info about the launch</p>
       </div>
-      <div class="map"></div>
+        <h1> Event Location </h1>
     </div>
 
     <div class="sponsor">
-      <div class='sponsors-title'>PROUD SPONSORS</div>
-
+      <div class='sponsors-title'>Proud Sponsors</div>
       <div class="spons-item">
 
         <div class='s-item'>
@@ -75,7 +74,7 @@
     </div>
   </footer>
   <script defer src="index.js"></script>
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqkHKOW4z1vmRIAlWlhLWGOpXxtVUVBmc&callback=initMap"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqkHKOW4z1vmRIAlWlhLWGOpXxtVUVBmc&callback=myMap"></script>
 </body>
 
 </html>
