--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <!-- seo meta setup -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>Hack Halal</title>
 </head>
@@ -42,21 +41,31 @@
       <div class="launch">
         <p>info about the launch</p>
       </div>
-        <h1> Event Location </h1>
+      <h1> Event Location </h1>
     </div>
 
     <div class="sponsor">
-      <div class='sponsors-title'>Proud Sponsors</div>
+      <h2>Proud Sponsors</h2>
       <div class="spons-item">
 
         <div class='s-item'>
-          <a href="https://stdlib.com/">
-            <img src="images/sponsors/stdlib.svg">
+          <a href="#">
+            <img src="https://mlab.com/welcome/img/homepage/logo-wholefoods.svg">
           </a>
         </div>
         <div class='s-item'>
-          <a href="https://stdlib.com/">
-            <img src="images/sponsors/stdlib.svg">
+          <a href="#">
+            <img src="https://mlab.com/welcome/img/homepage/logo-facebook.svg">
+          </a>
+        </div>
+        <div class='s-item'>
+          <a href="#">
+            <img src="https://www.treehacks.com/images/sponsors/ibmpos.png">
+          </a>
+        </div>
+        <div class='s-item'>
+          <a href="#">
+            <img src="https://www.treehacks.com/images/sponsors/microsoft.png">
           </a>
         </div>
       </div>
@@ -67,14 +76,21 @@
 
   <footer>
     <div class="social">
-      <img src="" alt="">
-      <p>sfa</p>
-      <img src="" alt="">
-      <p>sfa</p>
-      <img src="" alt="">
+      <a href="#">
+        <img src="./001-google-plus.png" alt="">
+      </a>
+      <a href="#">
+        <img src="./004-facebook.png" alt="">
+      </a>
+      <a href="#">
+        <img src="./003-twitter.png" alt="">
+      </a>
+      <a href="#">
+        <img src="./002-linkedin.png" alt="">
+      </a>
     </div>
     <div>
-      <p>hackHalal</p>
+      <p>Copyright &copy; Hack Halal</p>
     </div>
   </footer>
   <script defer src="index.js"></script>
