--- a/index.html
+++ b/index.html
@@ -13,38 +13,23 @@
 </head>
 
 <body>
-  <header>
-    <div class="logo">
-      <img alt="logo" src="images/logo.png" />
-    </div>
-    <nav>
-      <div class="nav-item">
-        <a href="#">About</a>
-      </div>
-      <div class="nav-item">
-        <a href="#">Features</a>
-      </div>
-      <div class="nav-item">
-        <a href="#">Careers</a>
-      </div>
-    </nav>
-  </header>
+  <video autoplay muted loop id="myVideo">
+    <source src="./vid.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+  </video>
 
-
-
-
-  <section class="section-showcase">
+  <section class="showcase">
     <div class="show-text">
       <h1>Hack the Halal Way</h1>
       <p>Come and join us to create halal stuff</p>
-      <a href="#">Subscribe</a>
       <!-- modal -->
-
+      <a href="#">Subscribe</a>
       <!-- modal -->
     </div>
   </section>
 
-  <section id="section-contact">
+  <section class="about">
+    <!-- <div class="bg"></div>
+    <div class="bg2"></div> -->
     <div class="contact-text">
       <h2>ABOUT</h2>
       <p class="wrapLine">
@@ -52,18 +37,9 @@
         corrupti perferendis, qui iure cumque odio magnam, ipsa id nobis, eaque iusto! Numquam, quasi quas!
       </p>
     </div>
-
-    <div class="contact-action">
-      <a href="#">
-        <i class="material-icons">
-          mail
-        </i>
-        <p>CONTACT US</p>
-      </a>
-    </div>
   </section>
 
-
+  <!--
   <div class="container">
     <div class="events">
       <div class="launch">
@@ -73,40 +49,40 @@
           deserunt dignissimos ut dolorum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione harum commodi.</p>
       </div>
       <div class="map">
-      <h1> Event Location </h1>
-      <div id="googleMap"> </div>
-    </div>
-
-    </div>
-
-    <div class="sponsor">
-      <h2>Proud Sponsors</h2>
-      <div class="spons-item">
-
-        <div class='s-item'>
-          <a href="#">
-            <img src="https://mlab.com/welcome/img/homepage/logo-wholefoods.svg">
-          </a>
-        </div>
-        <div class='s-item'>
-          <a href="#">
-            <img src="https://mlab.com/welcome/img/homepage/logo-facebook.svg">
-          </a>
-        </div>
-        <div class='s-item'>
-          <a href="#">
-            <img src="https://www.treehacks.com/images/sponsors/ibmpos.png">
-          </a>
-        </div>
-        <div class='s-item'>
-          <a href="#">
-            <img src="https://www.treehacks.com/images/sponsors/microsoft.png">
-          </a>
-        </div>
+        <h1> Event Location </h1>
+        <div id="googleMap"> </div>
       </div>
 
+    </div> -->
+
+  <section class="sponsor">
+    <h2>Proud Sponsors</h2>
+    <div class="spons-item">
+
+      <div class='s-item'>
+        <a href="#">
+          <img src="https://mlab.com/welcome/img/homepage/logo-wholefoods.svg">
+        </a>
+      </div>
+      <div class='s-item'>
+        <a href="#">
+          <img src="https://mlab.com/welcome/img/homepage/logo-facebook.svg">
+        </a>
+      </div>
+      <div class='s-item'>
+        <a href="#">
+          <img src="https://www.treehacks.com/images/sponsors/ibmpos.png">
+        </a>
+      </div>
+      <div class='s-item'>
+        <a href="#">
+          <img src="https://www.treehacks.com/images/sponsors/microsoft.png">
+        </a>
+      </div>
     </div>
-  </div>
+
+  </section>
+  <!-- </div> -->
 
 
   <footer>
@@ -128,7 +104,7 @@
       <p>Copyright &copy; Hack Halal</p>
     </div>
   </footer>
-  <script defer src="index.js"></script>
+  <!-- <script defer src="index.js"></script> -->
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4HZnyJbmrKePjDXa59FK03RR0tXocER4&callback=map"></script>
 
 
